# jarvis

./: .gitignore  index.html  package-lock.json  package.json
.github/workflows/: release.yml
landing/: index.html  package-lock.json  package.json  vercel.json
landing/src/: App.css  App.tsx  index.css
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  state.rs
src-tauri/src/commands/: keychain.rs  llm.rs  mod.rs  screen_capture.rs  settings.rs  tasks.rs
src-tauri/src/models/: capture.rs  llm.rs  mod.rs  settings.rs  task.rs
src-tauri/src/providers/: anthropic.rs  cli_wrapper.rs  mod.rs  ollama.rs  openai.rs  provider_trait.rs
src-tauri/src/security/: keychain.rs
src-tauri/src/services/: capture_service.rs  llm_service.rs  mod.rs  ocr_service.rs  priority_engine.rs
src-tauri/src/storage/: context_repository.rs  database.rs  mod.rs  task_repository.rs
src/components/common/: Badge.module.css  Badge.tsx  Button.module.css  Button.tsx  Card.module.css  Card.tsx  ErrorBoundary.tsx  Input.module.css  Input.tsx  Spinner.module.css  Spinner.tsx  Toggle.module.css  Toggle.tsx  index.ts
src/components/control/: StatusDisplay.module.css  StatusDisplay.tsx  WatchControls.module.css  WatchControls.tsx  index.ts
src/hooks/: index.ts  useLLMProvider.ts  useNotifications.ts  useScreenCapture.ts  useSettings.ts  useTasks.ts
src/pages/: Dashboard.module.css  Dashboard.tsx  History.module.css  History.tsx  Settings.module.css  Settings.tsx  index.ts
src/services/: capture.ts  index.ts  keychain.ts  llm.ts  settings.ts  tasks.ts
src/stores/: index.ts  llmStore.ts  settingsStore.ts  taskStore.ts  watchStore.ts
src/styles/: global.css  theme.ts
src/types/: index.ts
(+22 files in other folders)
