[package]
name = "jarvis"
version = "0.1.0"
description = "A macOS desktop app that watches the screen, feeds context to an LLM, detects actionable tasks, and displays them in a prioritized dashboard."
authors = ["refcell"]
edition = "2021"

[lib]
name = "jarvis_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri core
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-store = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Keychain integration
keyring = "3"

# SQLite database
rusqlite = { version = "0.32", features = ["bundled"] }

# LLM clients
reqwest = { version = "0.12", features = ["json"] }

# UUID generation
uuid = { version = "1", features = ["v4", "serde"] }

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Async trait support
async-trait = "0.1"

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
thiserror = "2"
anyhow = "1"

# Image handling
image = "0.25"
base64 = "0.22"

[target.'cfg(target_os = "macos")'.dependencies]
# macOS specific - using objc2 for Vision framework OCR
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSArray", "NSData", "NSError"] }
objc2-app-kit = { version = "0.3", features = ["NSImage", "NSGraphicsContext", "NSBitmapImageRep", "NSScreen"] }
core-graphics = "0.24"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
